chore: enable gc logs